# crypto_data_aggregator

./: .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  conanfile.txt  config.json  readme.md
.github/workflows/: ci.yml
profiles/: default
scripts/: deploy-service.sh
src/: main.cpp
src/aggregation/: CMakeLists.txt
src/aggregation/include/aggregation/: i_statistics_aggregator.hpp  symbol_snapshot.hpp
src/aggregation/src/: statistics_aggregator.cpp  statistics_aggregator.hpp  window_stats.cpp  window_stats.hpp
src/aggregation/tests/: statistics_aggregator_test.cpp  window_stats_test.cpp
src/app/: application.cpp  application.hpp  config_loader.cpp  config_loader.hpp  snapshot_output_adapter.cpp  snapshot_output_adapter.hpp
src/app/tests/: config_loader_test.cpp  snapshot_output_adapter_test.cpp
src/market/: CMakeLists.txt
src/market/include/market/: i_market_stream_handler.hpp  market_streams_controller.hpp  trade_event.hpp
src/market/src/: market_stream_handler.cpp  market_stream_handler.hpp  market_streams_controller.cpp
src/market/src/binance/: binance_config.hpp  binance_connection_manager.cpp  binance_connection_manager.hpp  binance_trade_message_parser.hpp
src/market/src/interfaces/: i_exchange_connection_manager.hpp
src/market/tests/: binance_config_test.cpp  binance_connection_manager_test.cpp  binance_trade_message_parser_test.cpp  market_stream_handler_test.cpp  market_streams_controller_test.cpp
src/market/tests/mocks/: mock_exchange_connection_manager.hpp
src/output/: CMakeLists.txt
src/output/include/output/: i_snapshot_printer.hpp  snapshot_printer_factory.hpp
src/output/src/: file_output_stream.cpp  file_output_stream.hpp  formatted_snapshot_printer.hpp  plain_text_formatter.cpp  plain_text_formatter.hpp  snapshot_printer_factory.cpp
src/output/src/interfaces/: i_output_stream.hpp  i_snapshot_formatter.hpp
src/output/tests/: file_output_stream_test.cpp  formatted_snapshot_printer_test.cpp  plain_text_formatter_test.cpp  snapshot_printer_factory_test.cpp
src/output/tests/mocks/: mock_output_stream.hpp  mock_snapshot_formatter.hpp
